--- a/CareerCloud.MVC/Views/CompanyProfile/Edit.cshtml
+++ b/CareerCloud.MVC/Views/CompanyProfile/Edit.cshtml
@@ -18,11 +18,27 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.RegistrationDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RegistrationDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RegistrationDate, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.CompanyDescriptions.Where(cd => cd.LanguageId.Trim() == "EN").FirstOrDefault().CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBox("CompanyName", (string)ViewBag.CompanyName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CompanyDescriptions.Where(cd => cd.LanguageId.Trim() == "EN").FirstOrDefault().CompanyName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.CompanyDescriptions.Where(cd => cd.LanguageId.Trim() == "EN").FirstOrDefault().CompanyDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBox("CompanyDescription", (string)ViewBag.ComapanyDescription, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CompanyDescriptions.Where(cd => cd.LanguageId.Trim() == "EN").FirstOrDefault().CompanyDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -50,21 +66,23 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.CompanyLogo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CompanyLogo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CompanyLogo, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
+        
+        @Html.HiddenFor(model => model.TimeStamp)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.TimeStamp, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TimeStamp, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TimeStamp, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
